--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
   "author": "Dominic Midlane",
   "license": "MIT",
   "devDependencies": {
+    "@types/node": "^18.14.3",
     "autoprefixer": "^10.4.13",
+    "cssnano": "^5.1.15",
     "postcss": "^8.4.21",
+    "postcss-assets": "^6.0.0",
     "postcss-cli": "^10.1.0",
     "postcss-import": "^15.1.0",
     "postcss-nested": "^6.0.1",
+    "postcss-preset-env": "^8.0.1",
     "postcss-simple-vars": "^7.0.1"
   }
 }
